--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <h1>自己紹介</h1>
   <p>こんにちは。このプロフィール画像は DIG のデザイナーさんに描いてもらいました！</p>
   <!-- <img src="/Users/udomatsuri/lecture/dig/fnd/foundations/day08/html-css/images/kotaro.png"></img> -->
-  <img src="./images/kotaro.png">
+  <img src="./kotaro.png">
   <h2>職業</h2>
   <p>プログラミングを教えています。</p>
   <div class="code-block">
